remove white spaces; fix texts

--- a/css/contactStyle.css
+++ b/css/contactStyle.css
@@ -100,6 +100,10 @@
     text-align: center;
     font-size: 1em;
 }
+.duvidas p a{
+    text-decoration: none;
+    color: inherit;
+}
 
 @media screen and (min-width: 1472px){
  .input-group{
